# yolo-object-detection

./: .gitignore  CMakeLists.txt  README.md
docs/: ClassStructure.md
docs/diagrams/: ClassStructure.puml
include/: cmd_line_parser.h  configuration.h  detection_output.h  model.h  output_layers.h  postprocessor.h  preprocessor.h  queue_fps.h  region.h  window.h  yolo.h
include/model/: detection_output.h  model.h  postprocessor.h  preprocessor.h  region.h
include/utils/: cmd_line_parser.h  files.h  yolo_utils.h
resources/: conf.yml
src/: cmd_line_parser.cpp  detection_output.cpp  main.cpp  model.cpp  output_layer.cpp  output_layers.cpp  postprocessor.cpp  preprocessor.cpp  queue_fps.cpp  window.cpp  yolo.cpp
src/model/: detection_output.cpp  model.cpp  output_layers.cpp  postprocessor.cpp  preprocessor.cpp  region.cpp
src/utils/: cmd_line_parser.cpp  files.cpp
test/: utest_placeholder.cpp  utest_queue_fps.cpp
